--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -2,5 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    color: red;
+    color: rgb(255, 0, 47);
+}
+
+h1 {
+    color: green;
 }
