--- a/src/templates/index.pug
+++ b/src/templates/index.pug
@@ -3,7 +3,7 @@ extends _layout.pug
 block locals 
   - var title = "Hello Pug";
 block content
-  h1 Hello, World!!
+  h1 Hello, World!!! 
   p Webpack learning
   img(src="../images/icon.png")
   img(src="../images/thumbnail.jpg")
